--- a/style.css
+++ b/style.css
@@ -13,57 +13,146 @@
   font-style: normal;
 }
 
-*{
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    padding: 0;;
-}
 body{
-    background-color: #E3F4FC;
+    background-color:#E3F4FC ;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 #main-panel{
-    width: 70%;
-    height: 70%;
-    background-color: white;
     margin-top: 5%;
-    gap:0;
+    width: 55%;
+    height:600px;
+    background-color: white;
     display: flex;
+    border-radius: 8px;
+    overflow: hidden;
+
 }
 #right-panel{
-    background-color: #14303F;
-    margin:0;
+    background-color: #123041;
+    height: 800px;
+    width: 50%;
 }
 #left-panel{
-    margin: 0;
+    padding: 15px 25px;
+    height: 800px;
+    width: 50%;
 }
-#left-title{
+.section-title{
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+}
+.section-title p a{
+    color: #929C9D;
+}
+.section-form{
+    height: 700px;
+    border: 2px solid black;
+}
+.input-group{
+    border: 2px solid black;
+    display: flex;
+    flex-wrap: wrap;
+    height: 75px;
+    padding: 20px 10px;
+    gap: px;
+}
+.group1 input{
+    width: 85%;
+    height: 50%;
+    border:1px solid #D8DB33;
+    border-radius: 7px;
+    margin-left: 10px;
+}
+.group1 input:focus{
+    width: 85%;
+    height: 50%;
+    border-color: 1px solid #D8DB33; /* Set the desired border color */
+    outline: none; /* Optional: Remove default outline */
+    box-shadow: 0 0 0 0.2rem #D8DB33;
+    border-radius: 4px;
+    margin-left: 10px;
+}
+.group2{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.group2-inner{
+    height: 100%;
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    
+}
+label{
     padding: 0px 10px;
-    gap:300px;
-    border: 2px solid black;
-    /* font-family: ; */
 }
-#left-title h2{
-    border: 2px solid black;
-    height: 20%;
-    width: 75%;
-    text-align: center;
+
+.group3{
+    display: flex;
+    flex-direction: column;
 }
-#left-title p{
-    width: 30%;
-    height: 15%;
-    position:relative;
-    text-align: center;
-    width: 30%;
-    height: 15%;
-    border: 2px solid black;
-    padding: 0;
-    display: inline;
+.group-1-input-icon{
+    /* text-align: center; */
+    display: flex;
+    border-radius: 7px 0px px 7px;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    width: 40px;
+    height: 52%;
+    border: none;
+    background-color: #D8DB33;
+    position: relative;
+    top:1.8%;
+    right: 86.1%;
+    
+    /* font-size: 500px; */
+}
+.group2-inner input{
+    margin-top: 10px;
+    border-radius: 5px;
+    height: 150px;
+    border: 1px solid #E4F4FC;
+}
+.group-2-input-icon{
+    background-color: #E4F4FC;
+    font-size: 14px;
+    color: #132630;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.a{
+    width: 40px;
+    height: 20px;
+    position: relative;
+    bottom: 30%;
+    left: 80%;
+
+}
+.b{
+    width: 40px;
+    height: 30px;
+    position: relative;
+    bottom: 30%;
+    left: 80%;
+}
+.group3{
+    gap:30px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.radio-group {
+    width: 100%;
+    border: 1px solid black;
+
+
 }
